# most-winningest

./: .gitignore  Cargo.toml  README.md  config.ru  db.rb  flake.nix  missing-posts.fragment.html  most-winning.rb  needing-updates.rb  package.nix  parse-dotinfo-page.rb  parse-from-file.rb  proper-db.rb  run.sh  serv.rb  shell.nix  step2.rb  step3.rb  update.rb
migrations/2019-10-25-042714_initial/: down.sql  up.sql
migrations/2019-11-08-020618_indexes/: up.sql
migrations/2021-10-24-232847_injected_posts/: down.sql  up.sql
old-ruby/: README.md  cache.db  count-days.rb  db.rb  main.rb
old-ruby/views/: index.haml
results/: most-winning-2017-09-04.txt  most-winning-2017-11-20.txt  most-winning-2017-12-02.txt  most-winning-2017-12-23.txt  most-winning-2018-01-29.txt  most-winning-2018-02-28.txt  most-winning-2018-03-27.txt  most-winning-2018-04-16.txt  most-winning-2018-06-06.txt  most-winning-2018-06-11.txt  most-winning-2018-06-13.txt  most-winning-2018-06-25.txt  most-winning-2018-07-13.txt  most-winning-2018-08-19.txt  most-winning-2018-09-09.txt  most-winning-2018-10-28.txt  most-winning-2019-01-16.txt  most-winning-2019-03-25.txt  most-winning-2019-06-11.txt  most-winning-2019-06-18-weeks.txt  most-winning-2019-06-18-weeks3.txt  most-winning-2019-06-18.txt  most-winning-2019-06-19.txt  most-winning-2019-08-30.txt  most-winning-2019-09-16.txt  most-winning-2019-10-21.txt
rir/: Cargo.toml  run.sh
rir/migrations/2019-11-08-020618_indexes/: down.sql  up.sql
rir/src/: main.rs  parser.rs  schema.rs
src/: generate.rs  known_systems.rs  main.rs  manual_schema.rs  parser.rs  schema.rs
views/: index.haml
