[package]
name = "most-winningest"
version = "0.1.0"
authors = ["Jean-luc <github-commit-email@jean-luc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "*"
#futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
reqwest = { version = "0.10.6", features = ["gzip", "cookies"] }
tokio = { version = "*", features = ["full"] }
chrono = "*"
dotenv = "*"
iron = "*"
phf = { version = "0.7.24", features = ["macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.maud]
version = "*"
features = ["iron"]

[dependencies.diesel]
version = "1.4.2"
features = ["postgres","chrono","r2d2"]
