[package]
name = "most-winningest"
version = "3.0.0"
authors = ["Jean-luc <github-commit-email@jean-luc.org>"]
edition = "2018"

[dependencies]
select = "0.5"
reqwest = { version = "0.10.6", features = ["gzip", "cookies"] }
tokio = { version = "1.16", features = ["full"] }
chrono = "0.4.19"
dotenv = "0.15.0"
phf = { version = "0.7.24", features = ["macros"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
maud = "0.22.3"
diesel = { version = "1.4.2", features = ["postgres","chrono","r2d2"] }
