[package]
name = "most-winningest"
version = "0.1.0"
authors = ["Jean-luc <github-commit-email@jean-luc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "*"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
reqwest = { version = "0.10.0-alpha.1", features = ["gzip", "cookies"] }
tokio = "0.2.0-alpha.1"
chrono = "*"